Changes for 1.8.12rc1

..F....... [ZBX-4761] fixed "&" encoding in input fields (Pavels)
A.F....... [ZBX-4697] fixed error when massupdate group for hosts that belongs to different groups (Vedmak)
.D........ [ZBX-4777] added information in the Zabbix sender manpage about values being sent in a sequential manner and the need to have ordered timestamps (Richlv)

Changes for 1.8.11

1.8.11rc1 was released as 1.8.11 without any changes

Changes for 1.8.11rc1

A.F....... [ZBX-4718] fixed Graph axis item cloning in host Full Clone (Toms)
..F....... [ZBX-3522] fixed errors when insert too long values to user_history and profiles tables (Vedmak)
A......... [ZBX-4124] fixed template.get to correctly select applications, graphs and triggers; thanks to gescheit (Alexei)
A......... [ZBX-4562] fixed meditype.update returning wrong formatted result (Toms)
...G...PS. [ZBX-4721] fixed handling of \u0000 by JSON parser; thanks to Rick Alm (Sasha)
..F....... [ZBX-4604] added the "change" link for clocks in screen configuration (Pavels)
..F....... [ZBX-4604] fixed the "change" link not being accessible for graph type screen items in embeded screens (Pavels)
........S. [ZBX-4549] fixed nested db transaction error when stopping server (dimir)
........S. [ZBX-4694] fixed possible SQL errors or server crash while processing trends by history syncer (Sasha)
..F....... [ZBX-4579] fixed incorrect "unknown" values in availability report if no events present (Alexei)
.......P.. [ZBX-4683] fixed timestamps mismatch while sending history data from proxy (Sasha)
..F....... [ZBX-4140] fixed trigger test functionality for operator '#' (Alexei)
..F....... [ZBX-4600] fixed trigger dependencies being reset when executing a mass update (Pavels)
A.F....... [ZBX-4604] fixed "screen" type screen item validation (Pavels)
..F....... [ZBX-4680] fixed minor typo in frontends/php/js/class.rpc.js (Alexei)